--- a/p2p-pages/src/main/resources/templates/loanInfo.html
+++ b/p2p-pages/src/main/resources/templates/loanInfo.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <title>牛牛牛金融网-深受大家希望的金融一站式解决网</title>
-<script type="text/javascript" th:src="@{/pstatic/js/jquery-1.7.2.min.js}"></script>
-<script type="text/javascript" th:src="@{/pstatic/js/trafficStatistics.js}"></script>
-<link rel="stylesheet" type="text/css" th:href="@{/pstatic/css/style.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/pstatic/css/share.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/pstatic/css/main.css}" />
+    <script type="text/javascript" th:src="@{/pstatic/js/jquery-1.7.2.min.js}"></script>
+    <script type="text/javascript" th:src="@{/pstatic/js/trafficStatistics.js}"></script>
+    <script type="text/javascript" th:src="@{/pstatic/js/logout.js}"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/pstatic/css/style.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/pstatic/css/share.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/pstatic/css/main.css}" />
 
 </head>
 
