--- a/p2p-loginAndRegister/src/main/resources/templates/register.html
+++ b/p2p-loginAndRegister/src/main/resources/templates/register.html
@@ -69,7 +69,7 @@
                 <span class="on">
                 <input id="agree" name="agree" type="checkbox"/>我已阅读并同意<a
                         href="javascript:alertBox('mask','agreement');"><font
-                        style="color: red;">《动力金融网&trade;注册服务协议》</font></a>
+                        style="color: red;">《牛牛牛金融网&trade;注册服务协议》</font></a>
                 </span>
                         </div>
 
