--- a/p2p-userCenter/src/main/resources/templates/commons/subNav.html
+++ b/p2p-userCenter/src/main/resources/templates/commons/subNav.html
@@ -2,8 +2,8 @@
 <div id="subNav" class="subNav">
 <div class="mainBox">
     <ul>
-      <li><a id="overView" th:href="@{/loan/myCenter}" class="on">总览</a></li>
-      <li><a id="myAccount" th:href="@{/loan/myAccount}">我的账户</a></li>
+      <li><a id="overView" th:href="@{/user/myCenter}" class="on">总览</a></li>
+      <li><a id="myAccount" th:href="@{/user/myAccount}">我的账户</a></li>
       <li></li>
       <li></li>
       <li></li>
