--- a/p2p-userCenter/src/main/resources/templates/myCenter.html
+++ b/p2p-userCenter/src/main/resources/templates/myCenter.html
@@ -48,7 +48,7 @@
                     <li class="availMoney">
                         <h3>可用余额：</h3>
                         <span class="moneyIcon"><i>¥ 9000.0 元</i></span>
-                        <a class="recharge" th:href="@{recharge/toRecharge}">充值</a>
+                        <a class="recharge" th:href="@{/recharge/toRecharge}">充值</a>
                         <a class="inves" th:href="@{/loan/loan}">投资</a>
                     </li>
                 </ul>
