--- a/p2p-pages/src/main/resources/templates/loan.html
+++ b/p2p-pages/src/main/resources/templates/loan.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" language="javascript" th:src="@{/pstatic/js/jquery-1.7.2.min.js}"></script>
     <script type="text/javascript" th:src="@{/pstatic/js/trafficStatistics.js}"></script>
     <script type="text/javascript" language="javascript" th:src="@{/pstatic/js/huaceng_new.js}"></script>
+	<script type="text/javascript" th:src="@{/pstatic/js/logout.js}"></script>
     <link rel="stylesheet" type="text/css" th:href="@{/pstatic/css/share.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/pstatic/css/main.css}"/>
     <style type="text/css">body{background:#f2f2f2;}</style>
